Fix table view scrolling on mobile

--- a/src/styles/theme/theme.scss
+++ b/src/styles/theme/theme.scss
@@ -64,6 +64,11 @@ h6 {
   overflow: visible;
 }
 
+.has-horizontal-overflow {
+	overflow-y: hidden;
+	overflow-x: auto;
+}
+
 .image.is-avatar {
   border-radius: 100%;
 }
